@@ -1,6 +1,7 @@
           The Command-Line User Interface     Term::Clui
 
-                     NEW !  Now with mouse !
+                     NEW !  Now with mouse  !
+                     NEW !  Now with speech !
 
 Term::Clui offers a high-level user interface, with subroutines &choose
 &ask &edit &view &confirm and &sorry.  It works at a higher level than
@@ -17,17 +18,8 @@ under Windows.
 To install just:
    perl Makefile.PL ; make ; make install
 
-For up-to-date source, see http://search.cpan.org/~pjb or see
-http://www.cpan.org/SITES.html in the directory authors/id/P/PJ/PJB
+For up-to-date source, see http://search.cpan.org/~pjb
 
-
-For the user, Version 1.50 introduced a significant upgrade: mouse-
--handling. The user can now select an item in &choose using the mouse
-and left-click, as well as by using the arrowkeys and return as before.
-&choose uses the mouse or arrow keys or hjkl, and return or button1,
-(or q to quit);  button3 or the spacebar mark items in a multiple
-choice. If the choices won't fit on the screen the user is asked for
-a substring clue.
 
 &edit and &view use the default  EDITOR  and  PAGER  from the user's
 environment,   except that if &view is called with a very short text
@@ -37,7 +29,6 @@ text remains on-screen or is cleared.
 &confirm expects Y,y,N or n.  &ask respects left and right arrows
 and backspace, ctrl-B moves to the beginning, ctrl-E to the end,
 and ctrl-D or ctrl-X clear the current string.
-
 
 &choose maintains a DBM database of what the user chose last time in
 response to the same question, and if it's still in the list this
@@ -57,9 +48,22 @@ left right normal reverse clrtoeol and mouse-reporting).  It handles
 window size changes, using Term::ReadKey or Term::Size if available;
 if not, it tries `tput`.
 
+For the user, Version 1.50 introduced a significant upgrade: mouse-
+-handling. The user can now select an item in &choose using the mouse
+and left-click, as well as by using the arrowkeys and return as before.
+&choose uses the mouse or arrow keys or hjkl, and return or button1,
+(or q to quit);  button3 or the spacebar mark items in a multiple
+choice. If the choices won't fit on the screen the user is asked for
+a substring clue.
 
-A calling-interface-compatible Python3-module ( ./py/TermClui.py )
-is included.
+Since version 1.60, a speaking interface is provided for the visually
+impaired user.  It employs  eflite,  which is also used by  emacspeak.
+Speech is turned on either if the  EDITOR  environment variable is set
+to  emacspeak, or if the CLUI_SPEAK environment variable is set to
+any non-empty string.  Because TermClui's metaphor for the computer
+is a human-like conversation-partner, this works very naturally.
+The application needs no modification.
+
+A calling-interface-compatible Python3-module is included.
 
 Peter Billam                http://www.pjb.com.au/comp/contact.html
-
